<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHealth">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/health_update"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/textView_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioGroup_wellness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_temp"
        app:layout_constraintStart_toStartOf="@+id/editText_temp"
        app:layout_constraintTop_toBottomOf="@+id/editText_temp">

        <RadioButton
            android:id="@+id/radioButton_well"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feel_well"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <RadioButton
            android:id="@+id/radioButton_unwell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feel_unwell" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/temp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/editText_time"
        app:layout_constraintTop_toBottomOf="@+id/editText_time"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/time"
        android:importantForAutofill="no"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="@+id/editText_date"
        app:layout_constraintTop_toBottomOf="@+id/editText_date" />

    <TableLayout
        android:id="@+id/tableLayout_signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_wellness">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <CheckBox
                android:id="@+id/checkBox_fever"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/fever" />

            <CheckBox
                android:id="@+id/checkBox_fatigue"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/fatigue" />

            <CheckBox
                android:id="@+id/checkBox_chills"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/chills" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBox_pain"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/pain" />

            <CheckBox
                android:id="@+id/checkBox_cough"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/cough" />

            <CheckBox
                android:id="@+id/checkBox_taste"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/taste" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/checkBox_breath"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/breath" />

            <CheckBox
                android:id="@+id/checkBox_headache"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/headache" />

            <CheckBox
                android:id="@+id/checkBox_throat"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:text="@string/throat" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView_signs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signs"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout_signs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_wellness" />

</androidx.constraintlayout.widget.ConstraintLayout>